--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^4.1.0",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.6",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "jwt-decode": "^3.1.2",
     "ldrs": "^1.0.1",
     "lucide-react": "^0.338.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.6.0",
+    "react-chartjs-2": "^5.2.0",
     "react-detect-offline": "^2.4.5",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
