--- a/beckend/package.json
+++ b/beckend/package.json
@@ -23,6 +23,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
     "openai": "^3.3.0",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "socket.io": "^4.8.1",
+    "stripe": "^17.5.0"
   }
 }
