--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.1.0",
     "@shadcn/ui": "^0.0.4",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -32,6 +34,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.1.1",
     "web-vitals": "^2.1.4"
   },
